# Servicenow-MCP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Quickstart.md  README.md  TOOLS.md  USAGE.md  list_update_sets.py  list_update_sets_direct.py  pyproject.toml  quick_snow_operations.py  setup.cfg
.claude/: settings.local.json
src/servicenow_mcp_server/: __main__.py  config_loader.py  constants.py  exceptions.py  models.py  prompts.py  server.py  tool_annotations.py  tool_utils.py  utils.py
src/servicenow_mcp_server/agile_management/: epic_tools.py  scrum_tools.py  story_tools.py
src/servicenow_mcp_server/analytics/: analytics_tools.py
src/servicenow_mcp_server/change_management/: change_tools.py
src/servicenow_mcp_server/changeset_management/: changeset_tools.py
src/servicenow_mcp_server/cmdb_management/: cmdb_tools.py
src/servicenow_mcp_server/incident_management/: incident_tools.py
src/servicenow_mcp_server/kb_management/: kb_tools.py
src/servicenow_mcp_server/problem_management/: problem_tools.py
src/servicenow_mcp_server/project_management/: project_tools.py
src/servicenow_mcp_server/request_management/: request_tools.py
src/servicenow_mcp_server/script_include_management/: script_include_tools.py
src/servicenow_mcp_server/service_catalog/: catalog_tools.py
test/: client_analytic.py  client_catalog_full.py  client_changeset_full.py  client_changest.py  client_cmdb.py  client_incident_full.py  client_kb.py  client_problem.py  client_request.py  client_script_man.py  client_sla.py  client_table_crud.py  client_ui_policy.py  client_update_set.py  client_update_set_full.py  client_user.py  client_workf_man.py  run_all_tests.py
test/agile_manage/: client_project.py  client_scrum1.py  test_client_ag1.py  test_client_ag2.py  test_client_ep1.py  test_client_ep2.py
test/catelog/: test_client_10.py  test_client_11.py  test_client_12.py  test_client_9.py
test/change_manage/: test_client_1.py  test_client_2.py  test_client_ch3.py  test_client_ch4.py
test/incident/: test_client.py  test_client_1.py  test_client_2.py  test_client_3.py  test_client_4.py  test_client_5.py  test_client_6.py  test_client_7.py  test_client_8.py
test_results/: test_results_2026-02-26_22-23-43_P170_F17.csv
(+6 files in other folders)
