[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snow-mcp"
# Increment the version for the new upload
version = "0.2.0"
description = "A comprehensive MCP server for interacting with ServiceNow modules."
authors = [
    { name = "Sourojit Dhua", email = "sourojit.dhua@gmail.com" }
]

# THE FIX IS HERE: Use the modern table format for the readme key
readme = {file = "README.md", content-type = "text/markdown"}

license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]

keywords = ["servicenow", "mcp", "fastmcp", "api", "automation", "itsm", "snow"]

dependencies = [
    "fastmcp>=2.1.0",
    "httpx",
    "pydantic",
    "python-dotenv"
]

[project.scripts]
snow-mcp = "servicenow_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]