[metadata]
name = servicenow-mcp-server
version = 0.2.0
description = ServiceNow MCP server with tools for incident, change, catalog, and agile management
long_description = file: README.md
long_description_content_type = text/markdown
author = Sourojit Dhua
license = MIT
license_files = LICENSE
platforms = any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    fastmcp>=2.1.0
    httpx
    pydantic
    python-dotenv>=1.0.0

[options.packages.find]
where = src
