[metadata]
name = servicenow-mcp-server
version = 0.3.0
description = A comprehensive MCP server for interacting with ServiceNow modules
long_description = file: README.md
long_description_content_type = text/markdown
author = Sourojit Dhua
license = MIT
license_files = LICENSE
platforms = any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    fastmcp>=3.0.0
    httpx
    pydantic
    python-dotenv>=1.0.0

[options.packages.find]
where = src
